--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,20 @@
       <li nz-menu-item nz-tooltip nzTooltipPlacement="right" nzSelected>
         <a routerLink="/overview">前端概览</a>
       </li>
-      <li nz-submenu nzOpen nzTitle="Dashboard">
+      <li nz-submenu nzOpen nzTitle="研发流程标准化">
         <ul>
-          <li nz-menu-item nzMatchRouter>
-            <a routerLink="/welcome">Welcome</a>
+          <!-- <li nz-menu-item nzMatchRouter>
+            <a routerLink="/welcome">规范制度|文档化|工具化</a>
+          </li> -->
+          <li nz-submenu nzOpen nzTitle="规范制度|文档化|工具化">
+            <ul>
+              <li nz-menu-item>
+                <a routerLink="/standard">工具集</a>
+              </li>
+              <li nz-menu-item>
+                <a routerLink="/standard/styleGuide">风格规范</a>
+              </li>
+            </ul>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a>Monitor</a>
