--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
               <li nz-menu-item>
                 <a routerLink="/standard/styleGuide">风格规范</a>
               </li>
+              <li nz-menu-item>
+                <a routerLink="/standard/code">代码规范</a>
+              </li>
             </ul>
           </li>
           <li nz-menu-item nzMatchRouter>
