feat: 完成编码规范

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,9 @@
               <li nz-menu-item>
                 <a routerLink="/standard/code">代码规范</a>
               </li>
+              <li nz-menu-item>
+                <a routerLink="/standard/perfomance">性能规范</a>
+              </li>
             </ul>
           </li>
           <li nz-menu-item nzMatchRouter>
