完成部分架构规范

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,10 +80,10 @@
       </li>
       <li nz-submenu nzOpen nzTitle="Demo" nzIcon="form">
         <ul>
-          <li nz-menu-item nzMatchRouter>
+          <li nz-menu-item>
             <a routerLink="/demo">demo1</a>
           </li>
-          <li nz-menu-item nzMatchRouter>
+          <li nz-menu-item>
             <a routerLink="/demo/second">demo2</a>
           </li>
         </ul>
