--- a/src/app/pages/demo/first/first.component.html
+++ b/src/app/pages/demo/first/first.component.html
@@ -2,6 +2,7 @@
 
 <button (click)="myEmit()">发射流</button>
 <button (click)="myDestroy()">销毁流</button>
+<!-- <button (click)="getDatas()">发请求</button> -->
 
 <ul>
   <!-- <li *ngFor="let item of data$ | async">
