--- a/src/app/pages/standard/engineering/project/project.component.html
+++ b/src/app/pages/standard/engineering/project/project.component.html
@@ -1,1 +1,3 @@
-<p>项目架构规范</p>
+<h1>一、总体项目结构</h1>
+<img src="assets/images/architecture/architecture.jpeg" alt="" width="100%">
+<markdown src="assets/markdown/standard/architecture.md"></markdown>
