feat: 完成规范制度&文档化&工具化的文档书写

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,7 +58,7 @@
                   </li>
                 </ul>
               </li>
-              <li nz-submenu nzOpen nzTitle="工程规范">
+              <li nz-submenu nzTitle="工程规范">
                 <ul>
                   <li nz-menu-item>
                     <a routerLink="/standard/engineer">项目架构规范</a>
@@ -67,6 +67,22 @@
                     <a routerLink="/standard/engineer/rxjs">Rxjs规范</a>
                   </li>
                 </ul>
+              </li>
+              <li nz-submenu nzTitle="文档规范">
+                <ul>
+                  <li nz-menu-item>
+                    <a routerLink="/standard/file">需求分析</a>
+                  </li>
+                  <li nz-menu-item>
+                    <a routerLink="/standard/file/summary">概要设计</a>
+                  </li>
+                  <li nz-menu-item>
+                    <a routerLink="/standard/file/detail">详细设计</a>
+                  </li>
+                </ul>
+              </li>
+              <li nz-menu-item>
+                <a routerLink="/">开源规范</a>
               </li>
             </ul>
           </li>
