--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,6 +73,11 @@ nz-content {
   margin: 24px;
 }
 
+nz-sider{
+  height: 100%;
+  overflow: auto;
+}
+
 .inner-content {
   padding: 24px;
   background: #fff;
