feat: 完成基础框架文档

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,12 +11,9 @@
       <li nz-menu-item nz-tooltip nzTooltipPlacement="right" nzSelected>
         <a routerLink="/overview">前端概览</a>
       </li>
-      <li nz-submenu nzOpen nzTitle="研发流程标准化">
+      <li nz-submenu nzTitle="研发流程标准化">
         <ul>
-          <!-- <li nz-menu-item nzMatchRouter>
-            <a routerLink="/welcome">规范制度|文档化|工具化</a>
-          </li> -->
-          <li nz-submenu nzOpen nzTitle="规范制度|文档化|工具化">
+          <li nz-submenu nzTitle="规范制度|文档化|工具化">
             <ul>
               <li nz-menu-item>
                 <a routerLink="/standard">工具集</a>
@@ -85,6 +82,9 @@
                 <a routerLink="/">开源规范</a>
               </li>
             </ul>
+          </li>
+          <li nz-menu-item>
+            <a routerLink="/frame">基础框架</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a>Monitor</a>
